--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "workflow-ux"
 version = "0.1.0"
 edition = "2021"
-license = "Apache-2.0 OR MIT"
+license = "Apache-2.0/MIT"
 repository = "https://github.com/workflow-rs/workflow-ux"
 keywords = ["wasm","framework","ux"]
 categories = ["wasm"]
