--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ rand = "0.7.3"
 bs58 = "0.4.0"
 derivative = "2.2.0"
 ritehash = "0.2.0"
+regex="1.6.0"
 
 [dependencies.web-sys]
 version = "0.3.56"
