--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,8 @@ features = [
     'HtmlImageElement',
     'HtmlInputElement',
     'HtmlHrElement',
+    'ScrollToOptions',
+    'ScrollBehavior',
     'Node',
     'NodeList',
     'Window',
