--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ bs58 = "0.4.0"
 derivative = "2.2.0"
 ritehash = "0.2.0"
 regex="1.6.0"
+url = "2.3.1"
 
 [dependencies.web-sys]
 version = "0.3.60"
@@ -75,5 +76,6 @@ features = [
     'MutationObserver',
     'MutationObserverInit',
     'MutationRecord',
-    'Navigator'
+    'Navigator',
+    'Location'
 ]
