--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,8 @@ derivative = "2.2.0"
 ritehash = "0.2.0"
 regex="1.6.0"
 url = "2.3.1"
+sha2="0.10.6"
+md5="0.7.0"
 
 [dependencies.web-sys]
 version = "0.3.60"
