--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,8 @@ js-sys = "0.3.56"
 async-std = "1.11.0"
 async-trait = "0.1.56"
 convert_case = "0.5.0"
-markdown = "0.3.0"
+#markdown = "0.3.0"
+pulldown-cmark = "0.9.2"
 downcast = "0.11.0"
 thiserror = "1.0"
 ahash = "0.8.0"
