--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,8 @@ wasm-bindgen-futures = "0.4.31"
 serde-wasm-bindgen = "0.4"
 js-sys = "0.3.56"
 async-std = "1.11.0"
-async-trait = "0.1.56"
+#async-trait = "0.1.56"
+async-trait = { path = "../async-trait" }
 convert_case = "0.5.0"
 pulldown-cmark = "0.9.2"
 downcast = "0.11.0"
