relocate lib fns to utils add local_storage accessor

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,5 +81,6 @@ features = [
     'MutationObserverInit',
     'MutationRecord',
     'Navigator',
-    'Location'
+    'Location',
+    'Storage',
 ]
